--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "build": "webpack --mode production",
     "dev": "webpack serve --mode development",
-    "start": "webpack --config webpack.config.js --watch"
+    "start": "webpack serve --open"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,7 @@
     "@babel/preset-env": "^7.20.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
-    "css-loader": "^6.7.1",
+    "css-loader": "^6.7.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.27.5",
@@ -36,6 +36,6 @@
     "webpack": "^5.70.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.11.1"
   }
 }
