--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --env=jsdom",
+    "test": "jest --coverage",
     "build": "webpack --mode production",
     "dev": "webpack serve --mode development",
     "start": "webpack serve --open"
@@ -25,7 +25,7 @@
     "hint": "^2.0.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.4.3",
+    "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
